# url_content_type_detector

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml  publish.yml  test.yml
docs/: Makefile  api.rst  conf.py  contributing.rst  index.rst  installation.rst  make.bat  robots.txt  sitemap.xml  usage.rst
docs/_templates/: layout.html
scripts/: demo.py
src/url_content_type_detector/: __init__.py  __version__.py  detector.py  exceptions.py  utils.py  validators.py
tests/: test_detector.py  test_utils.py
